--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   charts_flutter_new: ^0.12.0
   get: ^4.6.5
   data_table_2: ^2.5.6
+  uuid: ^3.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
